--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cors": "^2.8.5",
-    "csv-parse": "^4.4.3",
-    "express": "^4.17.1"
+    "csv-parse": "^4.4.3"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
