--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "live-parking-info",
   "version": "1.0.0",
-  "description": "All information contained in this folder can be accessed from Github on the following link: https://github.com/datagovsg/live-parking-info",
+  "description": "Course content for Understanding Web Development",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,22 +9,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/datagovsg/live-parking-info.git"
+    "url": "git+https://github.com/opengovsg/live-parking-info.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Nikhil Choudhary",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/datagovsg/live-parking-info/issues"
+    "url": "https://github.com/opengovsg/live-parking-info/issues"
   },
-  "homepage": "https://github.com/datagovsg/live-parking-info#readme",
+  "homepage": "https://github.com/opengovsg/live-parking-info#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "cors": "^2.8.5",
     "csv-parse": "^4.4.3"
   },
   "devDependencies": {
-    "eslint": "^6.0.1",
-    "eslint-config-google": "^0.13.0",
     "nodemon": "^1.19.1",
     "prettier": "1.18.2"
   }
